--- a/de001/index.html
+++ b/de001/index.html
@@ -14,9 +14,7 @@
         </header>
         <section id="pai">
             <p id="horas">Agora são x horas</p>
-            <section id="img">
-                <img src="img/" alt="">
-            </section>
+            <img src="img/manha.png" alt="">
         </section>
         <footer>
             <p>Development by @vittoriokevin</p>
