--- a/de002/index.html
+++ b/de002/index.html
@@ -29,8 +29,9 @@
                     <input type="button" value="Enviar" onclick="verificador()">
                 </p>
             </form>
-            <p id="txt_edit">Informe os dados para a verificação</p>
-            <img id="img_sex" src="" alt="">
+            <div id="resultado_area">
+                <p id="txt_edit">Informe os dados para a verificação</p>
+            </div>
         </section>
         <footer>
             <p>Developed by @vittoriokevin</p>
